some last minute fixes

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="Al 40 jaar toonaangevend in exclusieve auto's. Bekijk onze Audi, Bentley & Porsche occasions met lage km-stand én fabrieksgarantie. Kom langs en ervaar."
+      content="Al 40 jaar toonaangevend in exclusieve auto's. Bekijk onze Audi, Mercedes & Volkswagen occasions met lage km-stand én fabrieksgarantie. Kom langs en ervaar."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Exclusieve occasions Audi, Bentley &amp; Porsche | Auto Boomgaard</title>
+    <title>Exclusieve occasions Audi, Mercedes &amp; Volkswagen | Auto Boomgaard</title>
     <!-- Fast Fonts -->
     <link rel="stylesheet" href="//fast.fonts.net/cssapi/55b6bcad-e25f-4a69-9048-d97d165a1b74.css" media="nope" onload="this.media='all'" />
     <!-- Google Fonts - Premium Typefaces -->
